# PulsOS

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  SCAFFOLD.ini
docs/: ARCHITECTURE.md
memory/: memory.md
src/: main.c
src/core/: arena.c  arena.h  fsm.c  fsm.h  poll.c  poll.h  process.h
src/gpu/: metal_context.h  metal_context.m  treemap.metal
src/platform/: proc_macos.c  proc_platform.h
src/ui/: app.c  app.cpp  app.h  app_ui.cpp  app_ui.h  detail_panel.c  detail_panel.cpp  detail_panel.h  detail_panel_ui.cpp  implot_wrapper.cpp  implot_wrapper.h  process_list.c  process_list.cpp  process_list.h  process_list_ui.cpp  treemap.c  treemap.cpp  treemap.h  treemap_ui.cpp
